# organicmaps

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc.yaml  3party_only.pro  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.orig  CMakePresets.json  CONTACT.md  CONTRIBUTING.md  CONTRIBUTORS  DATA_LICENSE.txt  HAHARUDO.gpx  INSTALL.md  LEGAL  LICENSE  NOTES.md  NOTICE  README.md  about_organic_maps.py  bugs_sloynik.txt  build_version.hpp.in  common.pri  configure.sh  configure_boost.sh  crowdin.yml  defines.hpp  gcovr.cfg  gtool.pro  omim.pro  omim_config.h  omim_light.pro  package.json  (+15 more)
3party/: 3party.pro  CMakeLists.txt  enum_flags.hpp
base/: CMakeLists.txt  SRC_FIRST.hpp  array_adapters.h  array_adapters.hpp  assert.hpp  atomic_shared_ptr.hpp  base.cpp  base.hpp  base.pro  beam.hpp  bidirectional_map.hpp  bits.hpp  bitset.hpp  buffer_vector.hpp  buffer_vector.hpp.orig  bwt.cpp  bwt.hpp  cache.hpp  cancellable.cpp  cancellable.hpp  casts.hpp  checked_cast.hpp  clustering_map.hpp  collection_cast.hpp  commands_queue.cpp  commands_queue.hpp  condition.cpp  condition.hpp  condition_bada.cpp  condition_posix.cpp  condition_windows_native.cpp  const_helper.hpp  control_flow.hpp  deferred_task.cpp  deferred_task.hpp  dfa_helpers.hpp  enumerate.hpp  exception.cpp  exception.hpp  fast_math.cpp  (+128 more)
coding/: CMakeLists.txt  arithmetic_codec.cpp  arithmetic_codec.hpp  base64.cpp  base64.hpp  bit_shift.hpp  bit_streams.cpp  bit_streams.hpp  bit_vector_builder.hpp  blob_indexer.cpp  blob_indexer.hpp  blob_storage.cpp  blob_storage.hpp  buffer_reader.hpp  buffered_file_writer.cpp  buffered_file_writer.hpp  bwt.cpp  bwt_coder.hpp  byte_stream.hpp  bzip2_compressor.cpp  bzip2_compressor.hpp  coder.hpp  coder_util.hpp  coding.pro  compact_tree_builder.hpp  compact_trie_builder.hpp  compressed_bit_vector.cpp  compressed_bit_vector.hpp  compressed_varnum_vector.cpp  compressed_varnum_vector.hpp  constants.hpp  csv_file_reader.cpp  csv_file_reader.hpp  csv_reader.cpp  csv_reader.hpp  dd_base.hpp  dd_bit_rank_directory.hpp  dd_bit_vector.hpp  dd_compact_tree.hpp  dd_compact_trie.hpp  (+118 more)
dev_sandbox/: CMakeLists.txt  imgui_renderer.cpp  imgui_renderer.hpp  main.cpp  main.mm  main_linux.cpp  main_windows.cpp
drape/: CMakeLists.txt  attribute_buffer_mutator.cpp  attribute_buffer_mutator.hpp  attribute_provider.cpp  attribute_provider.hpp  batcher.cpp  batcher.hpp  batcher_helpers.cpp  batcher_helpers.hpp  bidi.cpp  bidi.hpp  binding_info.cpp  binding_info.hpp  buffer_base.cpp  buffer_base.hpp  color.cpp  color.hpp  constants.hpp  cpu_buffer.cpp  cpu_buffer.hpp  data_buffer.cpp  data_buffer.hpp  data_buffer_impl.hpp  debug_rect_renderer.cpp  debug_rect_renderer.hpp  debug_renderer.hpp  depth_constants.hpp  drape.pro  drape_common.pri  drape_diagnostics.hpp  drape_global.h  drape_global.hpp  drape_routine.hpp  dynamic_texture.hpp  feature_geometry_decl.hpp  font_constants.hpp  font_loader.cpp  font_loader.hpp  font_texture.cpp  font_texture.hpp  (+119 more)
drape_frontend/: CMakeLists.txt  animation_constants.hpp  animation_system.cpp  animation_system.h  animation_system.hpp  animation_utils.cpp  animation_utils.hpp  apply_feature_functors.cpp  apply_feature_functors.hpp  area_shape.cpp  area_shape.hpp  arrow3d.cpp  arrow3d.hpp  backend_renderer.cpp  backend_renderer.hpp  base_renderer.cpp  base_renderer.hpp  batch_merge_helper.cpp  batch_merge_helper.hpp  batcher_bucket.hpp  batchers_pool.cpp  batchers_pool.hpp  circle_shape.cpp  circle_shape.hpp  circles_pack_shape.cpp  circles_pack_shape.hpp  color_constants.cpp  color_constants.hpp  colored_symbol_shape.cpp  colored_symbol_shape.hpp  common_structures.cpp  common_structures.hpp  coverage_update_descriptor.cpp  coverage_update_descriptor.hpp  custom_features_context.hpp  custom_symbol.hpp  debug_rect_renderer.cpp  debug_rect_renderer.hpp  drape_api.cpp  drape_api.hpp  (+166 more)
editor/: CMakeLists.txt  changeset_wrapper.cpp  changeset_wrapper.hpp  config_loader.cpp  config_loader.hpp  editable_data_source.hpp  editable_feature_source.cpp  editable_feature_source.hpp  editor.pro  editor_config.cpp  editor_config.hpp  editor_notes.cpp  editor_notes.hpp  editor_storage.cpp  editor_storage.hpp  edits_migration.cpp  edits_migration.hpp  feature_matcher.cpp  feature_matcher.hpp  new_feature_categories.cpp  new_feature_categories.hpp  opening_hours_ui.cpp  opening_hours_ui.hpp  osm_auth.cpp  osm_auth.hpp  osm_editor.cpp  osm_editor.hpp  osm_feature_matcher.cpp  osm_feature_matcher.hpp  profile_picture.cpp  profile_picture.hpp  server_api.cpp  server_api.hpp  type_to_osm_mapper.cpp  ui2oh.cpp  ui2oh.hpp  user_stats.cpp  user_stats.hpp  xml_feature.cpp  xml_feature.hpp  (+1 more)
generator/: CLAUDE.md  CMakeLists.txt  TODO.txt  address_enricher.cpp  address_enricher.hpp  addresses_collector.cpp  addresses_collector.hpp  affiliation.cpp  affiliation.hpp  aggregating_sponsored_dataset.cpp  aggregating_sponsored_dataset.hpp  altitude_generator.cpp  altitude_generator.hpp  booking_dataset.cpp  booking_dataset.hpp  booking_scoring.cpp  booking_scoring.hpp  boost_helpers.hpp  borders.cpp  borders.hpp  borders_generator.cpp  borders_generator.hpp  borders_loader.cpp  borders_loader.hpp  boundary_postcodes_enricher.cpp  boundary_postcodes_enricher.hpp  brands_loader.cpp  brands_loader.hpp  camera_info_collector.cpp  camera_info_collector.hpp  camera_node_processor.cpp  camera_node_processor.hpp  category_to_speed.cpp  category_to_speed.hpp  cells_merger.cpp  cells_merger.hpp  centers_table_builder.cpp  centers_table_builder.hpp  check_model.cpp  check_model.hpp  (+365 more)
geocoder/: CMakeLists.txt  beam.cpp  beam.hpp  geocoder.cpp  geocoder.hpp  hierarchy.cpp  hierarchy.hpp  hierarchy_reader.cpp  hierarchy_reader.hpp  index.cpp  index.hpp  name_dictionary.cpp  name_dictionary.hpp  result.cpp  result.hpp  types.cpp  types.hpp
geometry/: CMakeLists.txt  aa_rect2d.hpp  algorithm.cpp  algorithm.hpp  angles.cpp  angles.hpp  any_rect2d.hpp  area_on_earth.cpp  area_on_earth.hpp  avg_vector.hpp  bbox.cpp  (+66 more)
(+34987 files in other folders)
