project(base)

set(
  SRC
  array_adapters.hpp
  assert.hpp
  base.cpp
  base.hpp
  bits.hpp
  buffer_vector.hpp
  bwt.cpp
  bwt.hpp
  cache.hpp
  cancellable.hpp
  checked_cast.hpp
  clustering_map.hpp
  collection_cast.hpp
  condition.cpp
  condition.hpp
  deferred_task.cpp
  deferred_task.hpp
  dfa_helpers.hpp
  exception.cpp
  exception.hpp
  get_time.hpp
  gmtime.cpp
  gmtime.hpp
  internal/message.cpp
  internal/message.hpp
  levenshtein_dfa.cpp
  levenshtein_dfa.hpp
  limited_priority_queue.hpp
  logging.cpp
  logging.hpp
  lower_case.cpp
  macros.hpp
  math.hpp
  matrix.hpp
  mem_trie.hpp
  move_to_front.cpp
  move_to_front.hpp
  mutex.hpp
  newtype.hpp
  normalize_unicode.cpp
  observer_list.hpp
  osm_id.cpp
  osm_id.hpp
  pprof.cpp
  pprof.hpp
  random.cpp
  random.hpp
  range_iterator.hpp
  ref_counted.hpp
  rolling_hash.hpp
  scope_guard.hpp
  set_operations.hpp
  shared_buffer_manager.cpp
  shared_buffer_manager.hpp
  small_set.hpp
  src_point.cpp
  src_point.hpp
  stats.hpp
  std_serialization.hpp
  stl_add.hpp
  stl_helpers.hpp
  stl_iterator.hpp
  string_format.cpp
  string_format.hpp
  string_utils.cpp
  string_utils.hpp
  strings_bundle.cpp
  strings_bundle.hpp
  suffix_array.cpp
  suffix_array.hpp
  sunrise_sunset.cpp
  sunrise_sunset.hpp
  task_loop.hpp
  thread.cpp
  thread.hpp
  thread_checker.cpp
  thread_checker.hpp
  thread_pool.cpp
  thread_pool.hpp
  threaded_container.cpp
  threaded_container.hpp
  threaded_list.hpp
  timegm.cpp
  timegm.hpp
  timer.cpp
  timer.hpp
  uni_string_dfa.cpp
  uni_string_dfa.hpp
  url_helpers.cpp
  url_helpers.hpp
  visitor.hpp
  worker_thread.cpp
  worker_thread.hpp
)

add_library(${PROJECT_NAME} ${SRC})

omim_add_test_subdirectory(base_tests)
